Alpha 5

- Added a very basic embark screen for entry of settlement name and map seed
- You can now manage multiple saved games via the UI, also overhauled save file format to use compression
- Hard-coded "Item groups" have been entirely replaced by moddable "Stockpile groups" which determine how stockpiles and the resources management screens work
- Stockpiles now support filtering by stockpile group, item type and item material, and can also have a priority set
- Twitch integration - twitch streamers can connect their account to have their viewers automatically show up in game!
- You can now rename settlers!
- Floors now overlap underneath walls, so the transparency at the edge of wall tiles makes sense rather than showing a grey border
- Overhauled how floors overlap onto other tiles, requiring far less sprites to be created (similar to walls)
- Replaced grass floors and all floor overlap sprites
- Pressing escape in a management screen will now go back to the main game (you can also right-click in the grey areas)
- Changed settler management to show non-selected professions as greyed-out, not removed
- Settler management can now be sorted by name (new default), or unhappiness (old default)

Alpha 4.2.3 - 24th November 2020

- Fixed a crash when deconstructing a wall that was not constructed
- Fixed an issue with map generation for very small maps

Alpha 4.2.2 - 23rd November 2020

- Extended seed.txt to allow for specifying of the map dimensions.
Note that the resolution of the minimap is set to the actual map dimensions, so maps nearly as large as the game resolution may be unplayable.

Alpha 4.2.1 - 23rd November 2020

- Fix for a crash that could happen when creating furniture decorations

Alpha 4.2 - 22nd November 2020

- Job prioritisation - You can click and drag to set different levels of priority for all jobs in the world, and also on items of furniture that produce jobs